Fix uptime alignment in minimized monitor (#365)
center uptime display when system monitor is collapsed

--- a/static/css/retro-refresh.css
+++ b/static/css/retro-refresh.css
@@ -348,6 +348,7 @@
     height: 40px;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 }
 
